# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laakhay"
version = "0.1.0"
description = "Meta-package for the Laakhay opensource ecosystem"
requires-python = ">=3.8"
authors = [
  { name = "Laakhay", email = "laakhay.corp@gmail.com" }
]
